--- a/scss/_popup.scss
+++ b/scss/_popup.scss
@@ -10,6 +10,7 @@
 	overflow-y: auto;
 	overflow-x: hidden;
 	transition: all 0.7s ease 0s;
+	z-index: 2;
 
 	&.open {
 		opacity: 1;
